Resolves: tdf#150926 Add-In result svl::SharedString needs to be interned

Change-Id: If582e7e1bf818dcf9eaddd5313aa21f5768a578f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139886
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins