sc/inc/addincol.hxx
@@ -44,6 +44,7 @@ class SfxObjectShell;
 class ScUnoAddInFuncData;
 class ScFuncDesc;
 class LanguageTag;
+class ScDocument;
 
 typedef std::unordered_map< OUString, const ScUnoAddInFuncData* > ScAddInHashMap;
 
@@ -198,6 +199,7 @@ private:
     css::uno::Sequence<css::uno::Any>         aArgs;
     css::uno::Sequence<css::uno::Any>         aVarArg;
     css::uno::Reference<css::uno::XInterface> xCaller;
+    ScDocument&                 mrDoc;
     bool                        bValidCount;
     // result:
     FormulaError                nErrCode;
@@ -211,7 +213,7 @@ private:
 
 public:
                     // exact name
-                    ScUnoAddInCall( ScUnoAddInCollection& rColl, const OUString& rName,
+                    ScUnoAddInCall( ScDocument& rDoc, ScUnoAddInCollection& rColl, const OUString& rName,
                                     tools::Long nParamCount );
                     ~ScUnoAddInCall();
 
